--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>AutoTranscript</title>
     <script type="module" crossorigin src="/index.js"></script>
     <link rel="stylesheet" crossorigin href="/index.css">
   </head>
-  <body>
+  <body class="dark">
     <div id="root"></div>
   </body>
 </html>
