queue now hits all the time, updated vite config

--- a/assets/index.html
+++ b/assets/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>atci</title>
     <script type="module" crossorigin src="/assets/index.js"></script>
+    <link rel="modulepreload" crossorigin href="/assets/react-vendor-DJG_os-6.js">
+    <link rel="modulepreload" crossorigin href="/assets/router-Cji3JhtE.js">
+    <link rel="modulepreload" crossorigin href="/assets/radix-CDPlHJ-s.js">
+    <link rel="modulepreload" crossorigin href="/assets/utils-BMpDO24p.js">
+    <link rel="modulepreload" crossorigin href="/assets/icons-dUk6Lg-n.js">
     <link rel="stylesheet" crossorigin href="/assets/index.css">
   </head>
   <body class="dark">
